@@ -1,5 +1,9 @@
 2010-09-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-group.el (gnus-group-archive-directory): Removed.
+	(gnus-group-recent-archive-directory): Ditto.
+	(gnus-group-make-archive-group): Removed.
+
 	* nnimap.el (nnimap-update-info): Protect against nil uidnexts.
 
 	* gnus-cache.el (gnus-cache-braid-heads): When braiding heads, don't
